# php-client

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  composer.json  phpunit.xml  test.php
.github/workflows/: build.yml  test.yml
DEBUG-sfalvo/: put.php
aerospike-connection-manager/: Dockerfile  Makefile  README.md  aerospike-connection-manager.service  aerospike-local-daemon.service  asld.toml  asld.toml.template  asld_kvs.proto  go.mod  go.sum  kvs.go  main.go  version.go
aerospike-connection-manager/pkg/: Makefile  post-install.sh
aerospike-connection-manager/proto/: asld_kvs.pb.go  asld_kvs_grpc.pb.go
benchmark/: README.md  benchmark.php  benchmarkPutGet.php
config/: config.yaml
daemon/: Makefile  README.md  asld.toml  asld_kvs.proto  go.mod  go.sum  kvs.go  main.go
daemon/common/: .golangci.yml  Makefile  example_test.go
daemon/pkg/: post-install.sh
daemon/proto/: asld_kvs.pb.go  asld_kvs_grpc.pb.go
docs/: index.html
docs/classes/: Aerospike-AdminPolicy.html  Aerospike-AerospikeException.html  Aerospike-BatchDelete.html  Aerospike-BatchDeletePolicy.html  Aerospike-BatchPolicy.html  Aerospike-BatchRead.html  Aerospike-BatchReadPolicy.html  Aerospike-BatchRecord.html  Aerospike-BatchUdf.html  Aerospike-BatchUdfPolicy.html  Aerospike-BatchWrite.html  Aerospike-BatchWritePolicy.html  Aerospike-Bin.html  Aerospike-BitwiseOp.html  Aerospike-BitwiseOverflowAction.html  Aerospike-BitwisePolicy.html  Aerospike-BitwiseResizeFlags.html  Aerospike-BitwiseWriteFlags.html  Aerospike-Client.html  Aerospike-CommitLevel.html  Aerospike-Concurrency.html  Aerospike-ConsistencyLevel.html  Aerospike-Context.html  Aerospike-ExpType.html  Aerospike-Expiration.html  Aerospike-Expression.html  Aerospike-Filter.html  Aerospike-GenerationPolicy.html  Aerospike-GeoJSON.html  Aerospike-HLL.html  Aerospike-HllOp.html  Aerospike-HllPolicy.html  Aerospike-HllWriteFlags.html  (+41 more)
examples/: FilterExpExample.php  UdfExample.php  authExample.php  batchExample.php  batchExamples.php  clientExample.php  deleteThisExample.php  geoQueryFilter.php  testGet.php
php_code_stubs/: php_stubs.php
php_stubs/: libaerospike-php-stubsv1.0.0.php
pkg/: README.md
redhat_test_env/: dockerfile
src/: filter_expression.rs  grpc.rs  lib.rs
tests/: BatchOpsTest.php  ClientTest.php  ConnectionTest.php  FilterExpTest.php  FilterTest.php  KeyTest.php  MemoryTest.php  PolicyTests.php  SecurityTest.php  UdfTest.php
(+99 files in other folders)
