[package]
name = "aerospike_php"
version = "1.0.2"
edition = "2021"
authors = ["Khosrow Afroozeh <khosrow@aerospike.com>", "Sachin Venkatesha Murthy <smurthy@aerospike.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
version-compare = "0.2.0"
ordered-float = { version = "3", default-features = false }
ext-php-rs = "0.12.0"
colored = "2.0.0"
hex = "0.4"
log = "0.4"
env_logger = "0.9.3"
chrono = "0.4"
lazy_static = "1.1.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
prost = "0.12"
tonic = "0.10"
tower = { version = "0.4.13", features = ["util"] }
byteorder = "1.3"
rand="0.8.5"
ripemd160 = "0.8"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
futures-util = "0.3.25"
anyhow = "1"

[profile.release]
strip = "debuginfo"
